Add entities and unit tests
This commit adds first entities to the project (Article, Category, Comment), Services and Interfaces. First unit testing for Article and Comment entities is added aswell

--- a/src/GeekStream.Infrastructure/GeekStream.Infrastructure.csproj
+++ b/src/GeekStream.Infrastructure/GeekStream.Infrastructure.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Data\" />
+    <ProjectReference Include="..\GeekStream.Core\GeekStream.Core.csproj" />
   </ItemGroup>
 
 </Project>
