--- a/tests/GeekStream.UnitTests/GeekStream.Core.UnitTests.csproj
+++ b/tests/GeekStream.UnitTests/GeekStream.Core.UnitTests.csproj
@@ -19,4 +19,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\GeekStream.Core\GeekStream.Core.csproj" />
+  </ItemGroup>
+
 </Project>
