Rework Context structure

--- a/src/GeekStream.Web/appsettings.json
+++ b/src/GeekStream.Web/appsettings.json
@@ -8,9 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "UserDbContext": "Server=(localdb)\\mssqllocaldb;Database=EFGetStarted.ConsoleApp.NewDb;Trusted_Connection=True;",
-    "ArticleDbContext": "Server=(localdb)\\mssqllocaldb;Database=EFGetStarted.ConsoleApp.NewDb;Trusted_Connection=True;",
-    "CategoryDbContext": "Server=(localdb)\\mssqllocaldb;Database=EFGetStarted.ConsoleApp.NewDb;Trusted_Connection=True;",
-    "CommentDbContext": "Server=(localdb)\\mssqllocaldb;Database=EFGetStarted.ConsoleApp.NewDb;Trusted_Connection=True;"
+    "AppDbContext": "Server=(localdb)\\mssqllocaldb;Database=EFGetStarted.ConsoleApp.NewDb;Trusted_Connection=True;"
   }
 }
