Add Service Injection to ArticleController

--- a/src/GeekStream.Web/appsettings.json
+++ b/src/GeekStream.Web/appsettings.json
@@ -6,8 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "AppDbContext": "Server=(localdb)\\mssqllocaldb;Database=EFGetStarted.ConsoleApp.NewDb;Trusted_Connection=True;"
+  "AllowedHosts": "*"
   }
-}
+
