Fix database bug with images

--- a/.gitignore
+++ b/.gitignore
@@ -111,7 +111,6 @@ ipch/
 *.cachefile
 *.VC.db
 *.VC.VC.opendb
-
 # Visual Studio profiler
 *.psess
 *.vsp
@@ -773,3 +772,5 @@ FodyWeavers.xsd
 # JetBrains Rider
 .idea/
 *.sln.iml
+*.jpg
+*.png
