--- a/src/GeekStream.Web/Properties/launchSettings.json
+++ b/src/GeekStream.Web/Properties/launchSettings.json
@@ -2,6 +2,10 @@
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
+    "iis": {
+      "applicationUrl": "http://geekstream/",
+      "sslPort": 0
+    },
     "iisExpress": {
       "applicationUrl": "http://localhost:14772",
       "sslPort": 44321
