Add Mail Sender

--- a/src/GeekStream.Web/appsettings.json
+++ b/src/GeekStream.Web/appsettings.json
@@ -6,6 +6,13 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MailSettings": {
+    "Mail": "danet.business@gmail.com",
+    "DisplayName": "GeekStream",
+    "Password": "13_Honimu",
+    "Host": "smtp.gmail.com",
+    "Port": 587
   }
+}
 
