--- a/src/GeekStream.Core/GeekStream.Core.csproj
+++ b/src/GeekStream.Core/GeekStream.Core.csproj
@@ -5,8 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MailKit" Version="2.14.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.6" />
+    <PackageReference Include="MimeKit" Version="2.14.0" />
   </ItemGroup>
 
 </Project>
